# realtime-notification-hub

./: .env.example  .gitignore  Cargo.toml
docs/: 1-pager.md  phase-10-redis-deep-dive.md  tech-spec.md
src/: lib.rs  main.rs  state.rs
src/auth/: extractor.rs  jwt.rs  mod.rs
src/config/: app_config.rs  mod.rs  redis.rs
src/distributed_lock/: mod.rs
src/error/: app_error.rs
src/monitoring/: mod.rs
src/notification/: mod.rs
src/presence/: mod.rs
src/redis_pubsub/: mod.rs
src/redis_streams/: mod.rs
src/response/: base.rs  mod.rs
src/sse/: cleanup.rs  connection_manager.rs  event.rs  handler.rs  mod.rs
src/write_behind/: mod.rs
tests/: sse_stream.rs
